--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
+        "genealabs/laravel-model-caching": "^0.3.5",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
